2013-02-27 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add outputNTUP_FTKIPFile to LODPK
    * Merging_trf.py Make the inputLogsFile optional for Hits merging
    * tagging as PATJobTransforms-00-05-06

2013-02-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add outputDAODM_HSG1File to LODPK
    * tagging as PATJobTransforms-00-05-05

2013-02-14  John Chapman  <John.Chapman@cern.ch>
	
	* tagging as PATJobTransforms-00-05-04
	* share/skeleton.MergeHIT.py - add code to configure DetFlags
	based on available SimHit containers. Should fix problems seen in
	merging of upgrade layout without the TRT and also AFII RTT jobs.

2013-02-07  Sebastien Binet  <binet@cern.ch>

	* tagging as PATJobTransforms-00-05-03
	* proper python module structure
	* A python/__init__.py

2013-02-04  Sebastien Binet  <binet@cern.ch>

	* tagging as PATJobTransforms-00-05-02
	* adding wscript file for hwaf
	* A wscript

2013-01-19 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reintegrate PATJobTransforms-00-04-43-branch
    * Tagging as PATJobTransforms-00-05-01
    *** Trunk is now the main development branch again

2013-01-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * ProdSysDicTools.py Correct bad panda data format of HITS, changing to Hits
    * ArgDictTools.py 'a' tags should be interpreted from panda
    * Tagging as PATJobTransforms-00-04-43-01

2013-01-09 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * ArgDicTools.py Update to PyAMI client version 4
    *** Important: Until PyAMI changes are accepted into the release *you* are targetting
        you will need to make PATJobTransforms-00-04-43-XX tags for releases using PyAMI 2.
        Information/Help from JT devs: atlas-comp-transforms-dev@cern.ch
    * Tagging as PATJobTransforms-00-05-00

2012-12-13 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add DAOD_JPSIMUMU and DAOD_UPSIMUMU outputs to LODPK (from James Catmore)